--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <p>📧 joacodv2003@gmail.com</p>
                 <p>📱 (294) 431-4006</p>
                 <p>📍 Villa la angostura, Argentina</p>
-                <p>🔗 linkedin.com/in/yourprofile</p>
             </div>
         </section>
 
@@ -44,9 +43,9 @@
                 <h3>Trainee developer</h3>
                 <p>2024 - Present</p>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Estudie los fundeamentos de la programación de manera autonoma</li>
+                    <li>Hice varios proyectos que me aportaron experiencia</li>
+                    <li>Asisti a una coperativa de software donde acompañaron mi aprendizaje</li>
                 </ul>
             </div>
         </section>
