--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Experiencia</h2>
             <div class="experience-item">
                 <h3>Trainee developer</h3>
-                <p>2024 - Present</p>
+                <p>2024 - Presente</p>
                 <ul>
                     <li>Estudie los fundeamentos de la programación de manera autonoma</li>
                     <li>Hice varios proyectos que me aportaron experiencia</li>
@@ -56,7 +56,7 @@
                 <div class="project-card">
                     <img src="/api/placeholder/300/200" alt="Project 1" class="project-img">
                     <h3>Proeyecto 1</h3>
-                    <p>Descripcion s and outcomes.</p>
+                    <p>Descripcion</p>
                     <p><strong>Tecnologias:</strong> React, Node.js, MongoDB</p>
                 </div>
 
@@ -67,13 +67,13 @@
                     <p><strong>Tecnologias:</strong> Vue.js, Express, PostgreSQL</p>
                 </div>
 
-                <div class="project-card">
-                    <img src="/api/placeholder/300/200" alt="Project 3" class="project-img">
+                <link href="https://piedra-papel-y-tijera.onrender.com" class="project-card">
+                    <!-- <img src="/api/placeholder/300/200" alt="Project 3" class="project-img"> -->
                     <h3>Proyecto 3</h3>
                     <p>Descripcion </p>
                     <p><strong>
-                        Tecnologias:</strong> Angular, Python, Django</p>
-                </div>
+                        Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </link>
             </div>
         </section>
 
