--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
                     <p><strong>Tecnologias:</strong> Vue.js, Express, PostgreSQL</p>
                 </div>
 
-                <link href="https://piedra-papel-y-tijera.onrender.com" class="project-card">
+                <div  class="project-card">
+                    <link href="https://piedra-papel-y-tijera.onrender.com">
                     <!-- <img src="/api/placeholder/300/200" alt="Project 3" class="project-img"> -->
                     <h3>Proyecto 3</h3>
                     <p>Descripcion </p>
                     <p><strong>
                         Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
-                </link>
+                    </link>
+                </div>
             </div>
         </section>
 
