--- a/index.html
+++ b/index.html
@@ -67,15 +67,13 @@
                     <p><strong>Tecnologias:</strong> Vue.js, Express, PostgreSQL</p>
                 </div>
 
-                <div  class="project-card">
-                    <link href="https://piedra-papel-y-tijera.onrender.com">
+                <a href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
                     <!-- <img src="/api/placeholder/300/200" alt="Project 3" class="project-img"> -->
                     <h3>Proyecto 3</h3>
                     <p>Descripcion </p>
                     <p><strong>
                         Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
-                    </link>
-                </div>
+                    </a>
             </div>
         </section>
 
