--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p><strong>Tecnologias:</strong> Vue.js, Express, PostgreSQL</p>
                 </div>
 
-                <a href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
+                <a target="_blank" href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
                     <!-- <img src="/api/placeholder/300/200" alt="Project 3" class="project-img"> -->
                     <h3>Proyecto 3</h3>
                     <p>Descripcion </p>
