--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <a target="_blank" href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
-                    <!-- <img src="/api/placeholder/300/200" alt="Project 3" class="project-img"> -->
+                    <img src="/Captura de pantalla (3).png" alt="Project 3" class="project-img">
                     <h3>Proyecto 3</h3>
                     <p>Descripcion </p>
                     <p><strong>
