--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
         <section class="section">
             <h2>Proyectos</h2>
             <div class="projects">
-                <div class="project-card">
-                    <img src="/api/placeholder/300/200" alt="Project 1" class="project-img">
+                <a target="_blank" href="https://galeria-mdrv.onrender.com" class="project-card">
+                    <img src="/Captura de pantalla (5).png" alt="Project 1" class="project-img">
                     <h3>Proeyecto 1</h3>
                     <p>Descripcion</p>
-                    <p><strong>Tecnologias:</strong> React, Node.js, MongoDB</p>
-                </div>
+                    <p><strong>Tecnologias:</strong> React, Node.js, Express, PostgreSQL</p>
+                </a>
 
                 <div class="project-card">
                     <img src="/api/placeholder/300/200" alt="Project 2" class="project-img">
                     <h3>Proyecto 2</h3>
                     <p>Descripcion </p>
-                    <p><strong>Tecnologias:</strong> Vue.js, Express, PostgreSQL</p>
+                    <p><strong>Tecnologias:</strong> React, Node.js, PostgreSQL</p>
                 </div>
 
                 <a target="_blank" href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
                     <img src="/Captura de pantalla (3).png" alt="Project 3" class="project-img">
                     <h3>Proyecto 3</h3>
-                    <p>Descripcion </p>
+                    <p>Sencillo juego de piedra papel y tijeras. </p>
                     <p><strong>
                         Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
                     </a>
