--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                 <a target="_blank" href="https://galeria-mdrv.onrender.com" class="project-card">
                     <img src="/Captura de pantalla (5).png" alt="Project 1" class="project-img">
                     <h3>Proeyecto 1</h3>
-                    <p>Descripcion</p>
+                    <p>Almacenaje de fotos por usuarios</p>
                     <p><strong>Tecnologias:</strong> React, Node.js, Express, PostgreSQL</p>
                 </a>
 
-                <div class="project-card">
-                    <img src="/api/placeholder/300/200" alt="Project 2" class="project-img">
+                <a target="_blank" href="https://registro-yxsr.onrender.com" class="project-card">
+                    <img src="/Captura de pantalla (6).png" alt="Project 2" class="project-img">
                     <h3>Proyecto 2</h3>
-                    <p>Descripcion </p>
+                    <p>Pequeño sistema de registro de estudiates </p>
                     <p><strong>Tecnologias:</strong> React, Node.js, PostgreSQL</p>
-                </div>
+                </a>
 
                 <a target="_blank" href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
                     <img src="/Captura de pantalla (3).png" alt="Project 3" class="project-img">
@@ -73,7 +73,7 @@
                     <p>Sencillo juego de piedra papel y tijeras. </p>
                     <p><strong>
                         Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
-                    </a>
+                </a>
             </div>
         </section>
 
