--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="section">
             <h2>Proyectos</h2>
             <div class="projects">
-                <a target="_blank" href="https://galeria-mdrv.onrender.com" class="project-card">
+                <a target="_blank" href="https://galeria-n21r.onrender.com" class="project-card">
                     <img src="/Captura de pantalla (5).png" alt="Project 1" class="project-img">
                     <h3>Proeyecto 1</h3>
                     <p>Almacenaje de fotos por usuarios</p>
