--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a target="_blank" href="https://registro-yxsr.onrender.com" class="project-card">
                     <img src="/Captura de pantalla (6).png" alt="Project 2" class="project-img">
                     <h3>Proyecto 2</h3>
-                    <p>Pequeño sistema de registro de estudiates </p>
+                    <p>Pequeño sistema de registro de estudiantes </p>
                     <p><strong>Tecnologias:</strong> React, Node.js, PostgreSQL</p>
                 </a>
 
