--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h3>Trainee developer</h3>
                 <p>2024 - Presente</p>
                 <ul>
-                    <li>Estudie los fundeamentos de la programación de manera autonoma</li>
+                    <li>Estudie los fundamentos de la programación de manera autonoma</li>
                     <li>Hice varios proyectos que me aportaron experiencia</li>
                     <li>Asisti a una coperativa de software donde acompañaron mi aprendizaje</li>
                 </ul>
@@ -53,23 +53,109 @@
         <section class="section">
             <h2>Proyectos</h2>
             <div class="projects">
-                <a target="_blank" href="https://galeria-n21r.onrender.com" class="project-card">
-                    <img src="/Captura de pantalla (5).png" alt="Project 1" class="project-img">
-                    <h3>Proeyecto 1</h3>
-                    <p>Almacenaje de fotos por usuarios</p>
-                    <p><strong>Tecnologias:</strong> React, Node.js, Express, PostgreSQL</p>
+                <a target="_blank" href="https://tip-calculator-nmkh.onrender.com" class="project-card">
+                    <img src="/tip-calculator.png"  class="project-img">
+                    <h3>Calculadora de propina</h3>
+                    <p>Programa para calcular propinas</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
                 </a>
 
-                <a target="_blank" href="https://registro-yxsr.onrender.com" class="project-card">
-                    <img src="/Captura de pantalla (6).png" alt="Project 2" class="project-img">
-                    <h3>Proyecto 2</h3>
-                    <p>Pequeño sistema de registro de estudiantes </p>
-                    <p><strong>Tecnologias:</strong> React, Node.js, PostgreSQL</p>
+                <a target="_blank" href="https://menu-acordeon.onrender.com" class="project-card">
+                    <img src="/menu-acordeon.png"  class="project-img">
+                    <h3>Menu acordeon</h3>
+                    <p>Menu desplegable</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://time-tracking-bt0x.onrender.com" class="project-card">
+                    <img src="/time-tracking.png"  class="project-img">
+                    <h3>Time tracking</h3>
+                    <p>Front de app para hacer seguimiento del tiempo</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://success-message.onrender.com" class="project-card">
+                    <img src="/Succes-message.png"  class="project-img">
+                    <h3>Suscripción</h3>
+                    <p>Suscripción con el mail</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://testimonials-grid-uchx.onrender.com" class="project-card">
+                    <img src="/testimonial-grid.png"  class="project-img">
+                    <h3>Testimonios</h3>
+                    <p>Grilla de testimonios</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+                
+                <a target="_blank" href="https://four-cards-880u.onrender.com" class="project-card">
+                    <img src="/four-cards.png"  class="project-img">
+                    <h3>Layout de tarjetas</h3>
+                    <p>Cuatro tarjetas con grid</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://contact-form-q4qh.onrender.com" class="project-card">
+                    <img src="/Formulario.png"  class="project-img">
+                    <h3>Formulario</h3>
+                    <p>Formulario de contacto</p>
+                    <p><strong>Tecnologias:</strong> React</p>
+                </a>
+
+
+                <a target="_blank" href="https://product-preview-card-5vm4.onrender.com" class="project-card">
+                    <img src="/Product-preview-card.png"  class="project-img">
+                    <h3>Tarjeta de producto</h3>
+                    <p>Secundario de venta de un producto</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+
+                <a target="_blank" href="https://social-links-profile-o3b1.onrender.com" class="project-card">
+                    <img src="/Social-link.png"  class="project-img">
+                    <h3>Links de presentación</h3>
+                    <p>Links de redes sociales</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://blog-preview-card-a94o.onrender.com" class="project-card">
+                    <img src="/Blog-preview-card.png"  class="project-img">
+                    <h3>Blog card</h3>
+                    <p>Presentación de un acceso a un blog</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://qr-code-rc9j.onrender.com" class="project-card">
+                    <img src="/Qr.png"  class="project-img">
+                    <h3>Codigo Qr</h3>
+                    <p>Pagina con codigo Qr interactiva</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://interactive-component-ull6.onrender.com" class="project-card">
+                    <img src="/Interactive-component.png"  class="project-img">
+                    <h3>Elemento de clasificación</h3>
+                    <p>Componente interactivo</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://article-component.onrender.com" class="project-card">
+                    <img src="/Article-component.png"  class="project-img">
+                    <h3>Componente</h3>
+                    <p>Componente de un articulo</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
+                </a>
+
+                <a target="_blank" href="https://recipe-page-0rpf.onrender.com" class="project-card">
+                    <img src="/recipe-page.png" class="project-img">
+                    <h3>Pagina de recetas</h3>
+                    <p>Diseño de una pagina de una receta</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
                 </a>
 
                 <a target="_blank" href="https://piedra-papel-y-tijera.onrender.com/" class="project-card">
-                    <img src="/Captura de pantalla (3).png" alt="Project 3" class="project-img">
-                    <h3>Proyecto 3</h3>
+                    <img src="/Captura de pantalla (3).png" class="project-img">
+                    <h3>Piedra, papel y tijeras</h3>
                     <p>Sencillo juego de piedra papel y tijeras. </p>
                     <p><strong>
                         Tecnologias:</strong> HTML, CSS, Vanilla JS</p>
