Añadiendo homepage proyecto

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
         <section class="section">
             <h2>Proyectos</h2>
             <div class="projects">
+                <a target="_blank" href="https://news-homepage-r1pa.onrender.com" class="project-card">
+                    <img src="/Homespage.png"  class="project-img">
+                    <h3>Homepage</h3>
+                    <p>Layout de inicio</p>
+                    <p><strong>Tecnologias:</strong> HTML, CSS, React</p>
+                </a>
+
                 <a target="_blank" href="https://tip-calculator-nmkh.onrender.com" class="project-card">
                     <img src="/tip-calculator.png"  class="project-img">
                     <h3>Calculadora de propina</h3>
